--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 crossterm = "0.28.1"
 hashbrown = "0.15.2"
 rpds = "1.1.0"
+serde = "1.0.217"
+serde_derive = "1.0.217"
+toml = "0.8.19"
