Implement a recording menu.
Needs error-handling.

--- a/src/static_data/data.toml
+++ b/src/static_data/data.toml
@@ -57,9 +57,9 @@
     product_count = 1
     name = "Echo Crystal"
 
-[recipes.basic_cloner]
+[recipes.recorder]
     ingredients = ["echo_crystal"]
     ingredient_counts = [1]
-    product = "basic_cloner"
+    product = "recorder"
     product_count = 1
-    name = "Basic Cloner"
+    name = "Empty Recorder"
