--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.28.1"
-ratatui = "0.29.0"
+ratatui = { version = "0.29.0",  features = ["serde"]}
 serde = "1.0.217"
 serde_derive = "1.0.217"
 toml = "0.8.19"
