--- a/src/static_data/data.toml
+++ b/src/static_data/data.toml
@@ -1,10 +1,9 @@
+[actors]
 [actors.player]
     name = "player"
-
 [actors.player.text]
     name = "Player"
     description = "It's you."
-
 [actors.player.appearance]    
     glyph = "@"
     glyph_n = "A"
@@ -15,11 +14,9 @@
 
 [actors.clone]
     name = "clone"
-
 [actors.clone.text]
     name = "clone"
     description = "It's your doppleganger."
-
 [actors.clone.appearance]    
     glyph = "@"
     glyph_n = "A"
@@ -30,64 +27,75 @@
 
 
 [buildings]
-
 [buildings.crystal_deposit]
-    name = "Crystal deposit"
-    description = "All the crystal you could ever want"
+    name = "crystal_deposit"
     on_interact = "building_mine"
+[buildings.crystal_deposit.text]
+    name = "Crystal Deposit"
+    description = "All the crystal you could ever want"
+[buildings.crystal_deposit.appearance]
     glyph = "O"
     color = "blue"
 
 [buildings.matter_digitizer]
-    name = "Matter Digitizer"
-    description = "Magically make items vanish"
+    name = "crystal_deposit"
     on_interact = "building_digitize"
+[buildings.matter_digitizer.text]
+    name = "Matter Digitizer"
+    description = "Converts items into score. Reduces local paradox levels."
+[buildings.matter_digitizer.appearance]
     glyph = "Y"
     color = "blue"
 
-[items]
 [items.recorder]
-    name = "Empty Recorder"
-    id = 2
-    description = "an empty recording item"
+    name = "recorder"
     on_use = "action_special_start_record"
+[items.recorder.text]
+    name = "Empty Recorder"
+    description = "an empty recording item"
+[items.recorder.appearance]
     glyph = "ꙮ"
     color = "blue"
 
 [items.raw_crystal]
+    name = "raw_crystal"
+    on_use = "action_special_start_record"
+[items.raw_crystal.text]
     name = "Raw Crystal"
-    id = 0
-    description = "TODO"
+    description = "Basic ore."
+[items.raw_crystal.appearance]
     glyph = "*"
     color = "grey"
 
 [items.basic_cloner]
-    name = "Basic cloner"
-    id = 4
-    description = "Spawns a clone of you"
+    name = "basic_cloner"
     on_use = "action_use_cloner"
+[items.basic_cloner.text]
+    name = "Basic cloner"
+    description = "Spawns clones of yourself."
+[items.basic_cloner.appearance]
     glyph = "@"
     color = "blue"
 
 [items.echo_crystal]
+    name = "echo_crystal"
+    score_value = 1
+[items.echo_crystal.text]
     name = "Echo Crystal"
-    id = 1
-    description = "TODO"
+    description = "A crafting material. Worth 1 score."
+[items.echo_crystal.appearance]
     glyph = "*"
     color = "grey"
-    score_value = 1
 
 [items.matter_digitizer]
     name = "matter_digitizer"
-    id = 1
-    description = "TODO"
+    on_use = "action_construct"
+[items.matter_digitizer.text]
+    name = "Matter Digitizer"
+    description = "Building. Worth 5 score. Converts items into score. Reduces local paradox levels."
+[items.matter_digitizer.appearance]
     glyph = "Y"
     color = "grey"
-    score_value = 1
-    on_use = "action_construct"
-
-
-
 
 [recipes]
 [recipes.echo_crystal]
