--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.28.1"
+eframe = "0.30.0"
+egui = "0.30.0"
 ratatui = { version = "0.29.0",  features = ["serde"]}
 serde = "1.0.217"
 serde_derive = "1.0.217"
