PARTIALLY WORKING: add image support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 eframe = "0.30.0"
 egui = "0.30.0"
+egui_extras = { version = "0.30.0", features = ["all_loaders"] }
 serde = "1.0.217"
 serde_derive = "1.0.217"
 toml = "0.8.19"
