--- a/src/static_data/data.toml
+++ b/src/static_data/data.toml
@@ -26,6 +26,7 @@
     glyph_s = "V"
     glyph_e = ">"
     glyph_w =  "<"
+    texture = "file://assets/clone_factory_pc_sprite_gray_upscaled.gif"
     color = "white"
 
 [actors.foe]
@@ -35,6 +36,7 @@
     description = "It's your foe doppleganger."
 [actors.foe.appearance]    
     glyph = "😡"
+    texture = "file://assets/clone_factory_basic_enemy_sprite.png"
     color = "white"
 
 [buildings]
@@ -46,6 +48,7 @@
     description = "All the crystal you could ever want"
 [buildings.crystal_deposit.appearance]
     glyph = "O"
+    texture = "file://assets/clone_factory_crystal.png"
     color = "blue"
 
 [buildings.matter_digitizer]
@@ -96,6 +99,7 @@
     description = "A crafting material. Worth 10 score."
 [items.echo_crystal.appearance]
     glyph = "*"
+    texture = "file://assets/clone_factory_refined_crystal.png"
     color = "grey"
 
 [items.matter_digitizer]
