--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 eframe = "0.30.0"
 egui = "0.30.0"
 egui_extras = { version = "0.30.0", features = ["all_loaders"] }
+log = "0.4.25"
 serde = "1.0.217"
 serde_derive = "1.0.217"
 toml = "0.8.19"
+
+#[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen-futures = "0.4.50"
+web-sys = "0.3.77"
