--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ toml = "0.8.19"
 
 #[target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.50"
-web-sys = "0.3.77"
+web-sys = {version = "0.3.77", features = ["Location", "Window"]}
