--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 eframe = "0.30.0"
 egui = "0.30.0"
 egui_extras = { version = "0.30.0", features = ["all_loaders"] }
+# Explicitly add png support, or it won't work on web.
+image = {version = "0.25.5", features = ["png"]}
 log = "0.4.25"
 serde = "1.0.217"
 serde_derive = "1.0.217"
